# template

./: README.md  main.py  notebook.ipynb  pyproject.toml
components/: __init__.py  divide.py  multiply.py  subtract.py  sum.py
tests/: test_divide.py  test_multiply.py  test_subtract.py  test_sum.py
